# libcryptobox

./: .travis.yml  Makefile.am  README  configure.ac
doc/: Makefile.am  secretbox.3  strongbox.3
src/: Makefile.am  constant_time.c  constant_time.h  secretbox.c  strongbox.c
src/cryptobox/: secretbox.h  strongbox.h
tests/: Makefile.am  constant_time_test.c  secretbox_test.c  strongbox_test.c
