AC_PREREQ([2.69])
AC_INIT([libcryptobox],
         [0.6.1],
         [kyle@tyrfingr.is],
         [],
         [http://cryptobox.tyrfingr.is/])
AM_INIT_AUTOMAKE([1.11 foreign])
LT_PREREQ([2.4.2])
LT_INIT

AC_CONFIG_SRCDIR([src/cryptobox/secretbox.h])
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile doc/Makefile])
AC_CHECK_HEADERS

AC_PROG_CC
AC_PROG_INSTALL

AC_OUTPUT
